--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.2.1'
 //    apt 'com.jakewharton:butterknife-compiler:8.2.1'
     testCompile 'junit:junit:4.12'
+
+    compile 'com.android.support:cardview-v7:23.0.0'
+    compile 'com.github.traex.expandablelayout:library:1.2.2'
 }
