--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ru.yamblz.translatetraining">
 
-    <application
+    <uses-permission android:name="android.permission.INTERNET" />
+    <application xmlns:tools="http://schemas.android.com/tools"
+        android:name=".YaApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        xmlns:tools="http://schemas.android.com/tools"
         tools:replace="android:icon">
         <activity android:name=".MainActivity">
             <intent-filter>
