--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,8 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.2.1'
     testCompile 'junit:junit:4.12'
 
-    compile 'com.android.support:cardview-v7:23.0.0'
-    compile 'com.github.traex.expandablelayout:library:1.2.2'
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
 
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
